[gd_scene load_steps=19 format=3 uid="uid://dsris3vonbgql"]

[ext_resource type="Script" uid="uid://cqyk32essq0q3" path="res://scenes/game/main/main.gd" id="1_7qucu"]
[ext_resource type="PackedScene" uid="uid://nmh3cj01pgrt" path="res://scenes/game/roles/brave/Brave.tscn" id="2_x7vlu"]
[ext_resource type="Script" uid="uid://b6pyclbjtphye" path="res://scenes/game/main/parallax_bg.gd" id="2_yhtai"]
[ext_resource type="Texture2D" uid="uid://d1gbs8sek1d4j" path="res://texture/background/bg1/layer_6.png" id="5_4hcl3"]
[ext_resource type="Texture2D" uid="uid://cygg4lfy8ew5" path="res://texture/background/bg1/layer_5.png" id="6_2fw5a"]
[ext_resource type="Texture2D" uid="uid://citorl3blcnp2" path="res://texture/background/bg1/layer_4.png" id="7_qryho"]
[ext_resource type="Texture2D" uid="uid://no74ppyncock" path="res://texture/background/bg1/layer_3.png" id="8_uqrpr"]
[ext_resource type="Texture2D" uid="uid://sduo7k4qwbjd" path="res://texture/background/bg1/layer_2.png" id="9_bp424"]
[ext_resource type="Texture2D" uid="uid://7mss05f5qpra" path="res://texture/background/bg1/2 -Background - Mountains (2).png" id="9_sbqww"]
[ext_resource type="Shader" uid="uid://c2xek0pund364" path="res://scenes/shader/gress.gdshader" id="9_xvxat"]
[ext_resource type="Texture2D" uid="uid://7o4t617fxfs3" path="res://texture/background/bg1/layer_1.png" id="10_7r3j3"]
[ext_resource type="Texture2D" uid="uid://kyt8ebjsgth7" path="res://texture/background/bg1/3 -Foreground - Mountains (3).png" id="10_enda1"]
[ext_resource type="Texture2D" uid="uid://b8k2ynxi51oi7" path="res://texture/background/bg1/5- Fog (5).png" id="12_5s3nj"]
[ext_resource type="PackedScene" uid="uid://dk438laoril8j" path="res://scenes/ui/GameUI.tscn" id="12_lxnk7"]
[ext_resource type="PackedScene" uid="uid://b2igpryoxc6ue" path="res://scenes/game/enemies/RogueGoblin/RogueGoblin.tscn" id="14_ryrj3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x8416"]
shader = ExtResource("9_xvxat")
shader_parameter/speed = 2.0
shader_parameter/minStrength = 0.05
shader_parameter/maxStrength = 0.2
shader_parameter/strengthScale = 100.0
shader_parameter/interval = 3.5
shader_parameter/detail = 1.56
shader_parameter/distortion = 0.465
shader_parameter/heightOffset = 0.062
shader_parameter/offset = 2.62

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lj1dg"]
shader = ExtResource("9_xvxat")
shader_parameter/speed = 2.0
shader_parameter/minStrength = 0.1
shader_parameter/maxStrength = 0.2
shader_parameter/strengthScale = 25.0
shader_parameter/interval = 2.0
shader_parameter/detail = 1.0
shader_parameter/distortion = 0.235
shader_parameter/heightOffset = 0.44
shader_parameter/offset = 1.33

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8q3ba"]
size = Vector2(256.946, 122.5)

[node name="Main" type="Node2D"]
script = ExtResource("1_7qucu")

[node name="GameUI" parent="." instance=ExtResource("12_lxnk7")]

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1043.0
offset_top = -292.0
offset_right = 1676.0
offset_bottom = 465.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.145098, 0.152941, 1)

[node name="ParallaxBg" type="Node2D" parent="."]
script = ExtResource("2_yhtai")

[node name="Parallax2D" type="Parallax2D" parent="ParallaxBg"]
scale = Vector2(0.5, 0.5)
scroll_offset = Vector2(27, 3)
repeat_size = Vector2(1280, 0)
metadata/_edit_group_ = true

[node name="Layer6" type="Sprite2D" parent="ParallaxBg/Parallax2D"]
position = Vector2(698, 58.0004)
scale = Vector2(2.30391, 1.17778)
texture = ExtResource("5_4hcl3")

[node name="Parallax2D2" type="Parallax2D" parent="ParallaxBg"]
scale = Vector2(0.5, 0.5)
repeat_size = Vector2(1280, 0)
repeat_times = 2
metadata/_edit_group_ = true

[node name="Layer6" type="Sprite2D" parent="ParallaxBg/Parallax2D2"]
position = Vector2(1492, 48)
texture = ExtResource("6_2fw5a")

[node name="Parallax2D3" type="Parallax2D" parent="ParallaxBg"]
scale = Vector2(0.5, 0.5)
repeat_size = Vector2(1280, 0)
repeat_times = 2
metadata/_edit_group_ = true

[node name="Layer6" type="Sprite2D" parent="ParallaxBg/Parallax2D3"]
position = Vector2(1492, 80)
texture = ExtResource("7_qryho")

[node name="Parallax2D4" type="Parallax2D" parent="ParallaxBg"]
scale = Vector2(0.5, 0.5)
repeat_size = Vector2(1280, 0)
repeat_times = 2
metadata/_edit_group_ = true

[node name="Layer6" type="Sprite2D" parent="ParallaxBg/Parallax2D4"]
position = Vector2(1492, 96)
texture = ExtResource("8_uqrpr")

[node name="Parallax2D5" type="Parallax2D" parent="ParallaxBg"]
scale = Vector2(0.5, 0.5)
repeat_size = Vector2(1280, 0)
repeat_times = 2
metadata/_edit_group_ = true

[node name="Layer6" type="Sprite2D" parent="ParallaxBg/Parallax2D5"]
position = Vector2(1492, 128)
texture = ExtResource("9_bp424")

[node name="Parallax2D6" type="Parallax2D" parent="ParallaxBg"]
scale = Vector2(0.5, 0.5)
repeat_size = Vector2(1280, 0)
repeat_times = 2
metadata/_edit_group_ = true

[node name="Layer6" type="Sprite2D" parent="ParallaxBg/Parallax2D6"]
position = Vector2(1492, 112)
texture = ExtResource("10_7r3j3")

[node name="Parallax2D7" type="Parallax2D" parent="ParallaxBg"]
scale = Vector2(0.5, 0.5)
repeat_size = Vector2(576, 0)
repeat_times = 10
ignore_camera_scroll = true
metadata/_edit_group_ = true

[node name="Layer6" type="Sprite2D" parent="ParallaxBg/Parallax2D7"]
material = SubResource("ShaderMaterial_x8416")
position = Vector2(356, 424)
texture = ExtResource("9_sbqww")

[node name="Parallax2D8" type="Parallax2D" parent="ParallaxBg"]
scale = Vector2(0.5, 0.5)
scroll_offset = Vector2(-4, 0)
repeat_size = Vector2(576, 0)
repeat_times = 10
ignore_camera_scroll = true
metadata/_edit_group_ = true

[node name="Layer6" type="Sprite2D" parent="ParallaxBg/Parallax2D8"]
material = SubResource("ShaderMaterial_lj1dg")
position = Vector2(356, 440)
texture = ExtResource("10_enda1")

[node name="Parallax2D10" type="Parallax2D" parent="ParallaxBg"]
z_index = 1
scale = Vector2(0.5, 0.5)
repeat_size = Vector2(576, 0)
repeat_times = 10
ignore_camera_scroll = true
metadata/_edit_group_ = true

[node name="Layer6" type="Sprite2D" parent="ParallaxBg/Parallax2D10"]
position = Vector2(356, 440)
texture = ExtResource("12_5s3nj")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
position = Vector2(350, 300)
scale = Vector2(10.5859, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-3.21182, -1.75)
shape = SubResource("RectangleShape2D_8q3ba")

[node name="Enemy" parent="." instance=ExtResource("14_ryrj3")]
position = Vector2(249, 236)

[node name="Brave" parent="." instance=ExtResource("2_x7vlu")]
position = Vector2(113, 235)

[node name="EffectNodes" type="Node2D" parent="."]
z_index = 1
